<resources>
    <string name="app_name">Expyrico</string>
</resources>
